@startuml overview
skinparam backgroundColor white
skinparam linetype ortho
hide circle
hide empty methods
hide empty members
hide members

entity "USERS" as USERS
entity "ORGANIZATIONS" as ORGANIZATIONS
entity "ORGANIZATION_MEMBERS" as ORGANIZATION_MEMBERS
entity "ORGANIZATION_POLICIES" as ORGANIZATION_POLICIES
entity "GROUPS" as GROUPS
entity "GROUP_MEMBERS" as GROUP_MEMBERS
entity "GROUP_POLICIES" as GROUP_POLICIES
entity "NOTES" as NOTES
entity "PRIVATE_NOTE_MEMBERS" as PRIVATE_NOTE_MEMBERS
entity "TAGS" as TAGS
entity "FOLDERS" as FOLDERS
entity "INVITATIONS" as INVITATIONS
entity "NOTIFICATIONS" as NOTIFICATIONS
entity "ORGANIZATION_ROLES" as ORGANIZATION_ROLES
entity "GROUP_ROLES" as GROUP_ROLES
entity "PERMISSIONS" as PERMISSIONS

USERS ||--o{ ORGANIZATION_MEMBERS
USERS ||--o{ GROUP_MEMBERS
USERS ||--o{ PRIVATE_NOTE_MEMBERS
USERS ||--o{ NOTIFICATIONS

ORGANIZATIONS ||--o{ ORGANIZATION_MEMBERS
ORGANIZATIONS ||--o| ORGANIZATION_POLICIES
ORGANIZATIONS ||--o{ GROUPS
ORGANIZATIONS ||--o{ INVITATIONS

ORGANIZATION_ROLES ||--o{ ORGANIZATION_MEMBERS
ORGANIZATION_ROLES ||--o{ INVITATIONS
ORGANIZATION_ROLES }o--o{ PERMISSIONS

GROUPS ||--o{ GROUP_MEMBERS
GROUPS ||--o| GROUP_POLICIES
GROUPS ||--o{ NOTES
GROUPS ||--o{ FOLDERS
GROUPS ||--o{ TAGS

GROUP_ROLES ||--o{ GROUP_MEMBERS
GROUP_ROLES }o--o{ PERMISSIONS

NOTES ||--o{ PRIVATE_NOTE_MEMBERS
NOTES }o--o{ TAGS
NOTES }o--o| FOLDERS

FOLDERS |o--o{ FOLDERS
@enduml
